--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
 
 <body>
 
+    <!--Header part-->
+    <header>
+        <div class="header-content">
+            <div class="logo">
+                <p><img src="asset/images/logo.png" alt=""></p>
+            </div>
+            <div class="list">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Products</a>
+                <a href="#">Collection</a>
+                <a href="#">Contacts</a>
+            </div>
+        </div>
+    </header>
+
     <script src="asset/javascript/app.js"></script>
 </body>
 
