add to my repository

--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
         </div>
     </header>
 
+    <!-- Home page -->
+    <section>
+
+
+        <div class="circle-btn">
+            <div class="circle active"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+    </section>
+
     <script src="asset/javascript/app.js"></script>
 </body>
 
