add to my repository

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     </header>
 
     <!-- Home page -->
-    <section>
-
+    <section class="home-section">
+        <div>
+            <p><img src="" alt=""></p>
+        </div>
 
         <div class="circle-btn">
             <div class="circle active"></div>
