add to my repository

--- a/index.html
+++ b/index.html
@@ -41,8 +41,15 @@
 
     <!-- Home page -->
     <section class="home-section">
-        <div>
-            <p><img src="" alt=""></p>
+        <div class="home-images">
+            <div class="gradient-overlay"></div>
+            <p><img class="home-bg" src="asset/images/bg-1.jpg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-2.jpg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-3.jpg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-4.jpg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-5.jpg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-6.jpg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-7.jpg" alt=""></p>
         </div>
 
         <div class="circle-btn">
