add to my repository

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 
     <!-- Home page -->
     <section class="home-section">
+
+        <div class="home-text">
+            <h1>Lorem ipsum dolor sit.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium qui suscipit nesciunt, recusandae placeat vitae? Possimus expedita autem similique quaerat!</p>
+            <a href="#">Get started</a>
+        </div>
+
         <div class="home-images">
             <div class="gradient-overlay"></div>
             <p><img class="home-bg" src="asset/images/bg-1.jpg" alt=""></p>
