add to my repository

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <section class="home-section">
         <div class="home-text">
             <h1>Lorem ipsum dolor sit.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium qui suscipit nesciunt, recusandae placeat vitae? Possimus expedita autem similique quaerat!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores quisquam, at officiis aliquam earum perspiciatis eius et cum eos eveniet iste harum laboriosam expedita, commodi labore autem exercitationem impedit asperiores itaque minus
+                quam accusantium, magni aspernatur. Labore ratione fugit maxime?</p>
             <a href="#">Get started</a>
         </div>
 
