--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <section class="home-section">
         <div class="home-text">
             <h1>Lorem ipsum dolor sit.</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores quisquam, at officiis aliquam earum perspiciatis eius et cum eos eveniet iste harum laboriosam expedita, commodi labore autem exercitationem impedit asperiores itaque minus
-                quam accusantium, magni aspernatur. Labore ratione fugit maxime?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio numquam, odit sapiente sit dolorem nisi minima repudiandae, consequatur expedita ipsa impedit nam dolor ratione atque fugiat quae perspiciatis neque reprehenderit.</p>
             <a href="#">Get started</a>
         </div>
 
