add to my repository

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <p><img class="home-bg" src="asset/images/bg-2.jpg" alt=""></p>
             <p><img class="home-bg" src="asset/images/bg-3.jpg" alt=""></p>
             <p><img class="home-bg" src="asset/images/bg-4.jpg" alt=""></p>
-            <p><img class="home-bg" src="asset/images/bg-5.jpg" alt=""></p>
-            <p><img class="home-bg" src="asset/images/bg-6.jpg" alt=""></p>
-            <p><img class="home-bg" src="asset/images/bg-7.jpg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-5.jpeg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-6.jpeg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-7.jpeg" alt=""></p>
         </div>
 
         <div class="circle-btn">
