--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p><img src="asset/images/logo.png" alt=""></p>
             </div>
             <div class="list">
-                <a href="#">Home</a>
+                <a class="home" href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Products</a>
                 <a href="#">Collection</a>
