add to my repository

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div class="gradient-overlay"></div>
             <p><img class="home-bg" src="asset/images/bg-1.jpg" alt=""></p>
             <p><img class="home-bg" src="asset/images/bg-2.jpg" alt=""></p>
-            <p><img class="home-bg" src="asset/images/bg-3.jpg" alt=""></p>
-            <p><img class="home-bg" src="asset/images/bg-4.jpg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-3.jpeg" alt=""></p>
+            <p><img class="home-bg" src="asset/images/bg-4.jpeg" alt=""></p>
             <p><img class="home-bg" src="asset/images/bg-5.jpeg" alt=""></p>
             <p><img class="home-bg" src="asset/images/bg-6.jpeg" alt=""></p>
             <p><img class="home-bg" src="asset/images/bg-7.jpeg" alt=""></p>
