add to my repository

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <a href="#">Products</a>
                 <a href="#">Collection</a>
                 <a href="#">Contacts</a>
+                <a href="#"><i class="bi bi-bag"></i></a>
             </div>
         </div>
     </header>
