add to my repository

--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
         </div>
     </section>
 
+    <!-- About us -->
+    <section class="about">
+        <div class="title">
+            <h2>About us</h2>
+            <h4></h4>
+        </div>
+        <div class="about-image">
+            <p><img src="asset/images/about.jpg" alt=""></p>
+        </div>
+        <div class="about-text">
+
+        </div>
+    </section>
+
 
     <script src="asset/javascript/app.js"></script>
 </body>
