--- a/index.html
+++ b/index.html
@@ -76,11 +76,17 @@
             <h2>About us</h2>
             <h4></h4>
         </div>
-        <div class="about-image">
-            <p><img src="asset/images/about.jpg" alt=""></p>
-        </div>
-        <div class="about-text">
-
+        <div class="about-content">
+            <div class="about-image">
+                <p><img src="asset/images/about.jpg" alt=""></p>
+            </div>
+            <div class="about-text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, natus! Commodi at placeat nam. Quasi adipisci earum quis quibusdam, magni autem suscipit quia consequuntur obcaecati sapiente officiis ipsa voluptatem eum voluptatum accusamus
+                    facere sequi velit! Officiis provident ex tenetur eum magni in illum vitae a!</p>
+                <p><i class="bi bi-check2-all"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio voluptatibus, et animi a labore porro?</p>
+                <p><i class="bi bi-check2-all"></i> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt velit exercitationem quibusdam?</p>
+                <p><i class="bi bi-check2-all"></i> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad possimus minus facere quia!</p>
+            </div>
         </div>
     </section>
 
