add to my repository

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="about-content">
             <div class="about-image">
-                <p><img src="asset/images/about.jpg" alt=""></p>
+                <p><img src="asset/images/about.png" alt=""></p>
             </div>
             <div class="about-text">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, natus! Commodi at placeat nam. Quasi adipisci earum quis quibusdam, magni autem suscipit quia consequuntur obcaecati sapiente officiis ipsa voluptatem eum voluptatum accusamus
