add to my repository

--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
     <!-- About us -->
     <section class="about">
         <div class="title">
+            <div>
+                <h4>About</h4>
+                <h5></h5>
+            </div>
             <h2>About us</h2>
-            <h4></h4>
         </div>
         <div class="about-content">
             <div class="about-image">
