add to my repository

--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
         </div>
     </section>
 
+    <!-- Why to choose us -->
+    <section class="choose-us">
+        <div class="title">
+            <div>
+                <h4>Choose</h4>
+                <p></p>
+            </div>
+            <h2>Why to choose us</h2>
+        </div>
+    </section>
 
     <script src="asset/javascript/app.js"></script>
 </body>
