--- a/index.html
+++ b/index.html
@@ -101,6 +101,23 @@
             </div>
             <h2>Why to choose us</h2>
         </div>
+
+        <div class="choose-us-content">
+            <div class="choose-us-item">
+                <div>
+                    <i class="bi bi-bar-chart"></i>
+                    <h4>Lorem ipsum dolor sit.</h4>
+                </div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
+            </div>
+            <div class="choose-us-item">
+                <div>
+                    <i class="bi bi-bullseye"></i>
+                    <h4>Lorem ipsum dolor sit.</h4>
+                </div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
+            </div>
+        </div>
     </section>
 
     <script src="asset/javascript/app.js"></script>
