--- a/index.html
+++ b/index.html
@@ -117,6 +117,34 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
                 </div>
             </div>
+            <div class="choose-us-item">
+                <i class="bi bi-bar-chart"></i>
+                <div>
+                    <h4>Lorem ipsum dolor sit.</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
+                </div>
+            </div>
+            <div class="choose-us-item">
+                <i class="bi bi-bullseye"></i>
+                <div>
+                    <h4>Lorem ipsum dolor sit.</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
+                </div>
+            </div>
+            <div class="choose-us-item">
+                <i class="bi bi-bar-chart"></i>
+                <div>
+                    <h4>Lorem ipsum dolor sit.</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
+                </div>
+            </div>
+            <div class="choose-us-item">
+                <i class="bi bi-bullseye"></i>
+                <div>
+                    <h4>Lorem ipsum dolor sit.</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
+                </div>
+            </div>
         </div>
     </section>
 
