--- a/index.html
+++ b/index.html
@@ -111,35 +111,35 @@
                 </div>
             </div>
             <div class="choose-us-item">
-                <i class="bi bi-bullseye"></i>
+                <i class="bi bi-graph-up"></i>
                 <div>
                     <h4>Lorem ipsum dolor sit.</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
                 </div>
             </div>
             <div class="choose-us-item">
-                <i class="bi bi-bar-chart"></i>
+                <i class="bi bi-chat-dots"></i>
                 <div>
                     <h4>Lorem ipsum dolor sit.</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
                 </div>
             </div>
             <div class="choose-us-item">
-                <i class="bi bi-bullseye"></i>
+                <i class="bi bi-clock-history"></i>
                 <div>
                     <h4>Lorem ipsum dolor sit.</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
                 </div>
             </div>
             <div class="choose-us-item">
-                <i class="bi bi-bar-chart"></i>
+                <i class="bi bi-collection"></i>
                 <div>
                     <h4>Lorem ipsum dolor sit.</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
                 </div>
             </div>
             <div class="choose-us-item">
-                <i class="bi bi-bullseye"></i>
+                <i class="bi bi-snow"></i>
                 <div>
                     <h4>Lorem ipsum dolor sit.</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia repudiandae voluptatum, voluptate dolore hic provident.</p>
