--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
             </div>
             <div class="list">
                 <a class="home" href="#">Home</a>
-                <a href="#">About</a>
+                <a href="#">About us</a>
                 <a href="#">Products</a>
-                <a href="#">Collection</a>
                 <a href="#">Contacts</a>
                 <a class="panier" href="#"><i class="bi bi-cart"></i></a>
             </div>
