add to my repository

--- a/index.html
+++ b/index.html
@@ -147,6 +147,21 @@
         </div>
     </section>
 
+    <!-- Products -->
+    <!--section class="product">
+        <div class="title">
+            <div>
+                <h4>Product</h4>
+                <p></p>
+            </div>
+            <h2>Our products</h2>
+        </div>
+    </section-->
+
+    <section class="newsletter">
+
+    </section>
+
     <script src="asset/javascript/app.js"></script>
 </body>
 
