add to my repository

--- a/index.html
+++ b/index.html
@@ -159,7 +159,14 @@
     </section-->
 
     <section class="newsletter">
-
+        <div class="newstext">
+            <h3>Our newsletter</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt odit, explicabo soluta doloremque quae et?</p>
+        </div>
+        <div class="news-input">
+            <input type="email" placeholder="Your email" name="" id="">
+            <button>Send</button>
+        </div>
     </section>
 
     <script src="asset/javascript/app.js"></script>
