add to my repository

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
         </div>
     </section-->
 
+    <!-- Newsletter -->
+
     <section class="newsletter">
         <div class="newstext">
             <h3>Our newsletter</h3>
@@ -168,6 +170,8 @@
             <button>Send</button>
         </div>
     </section>
+
+    <!-- Contacts -->
 
     <script src="asset/javascript/app.js"></script>
 </body>
