add to my repository

--- a/index.html
+++ b/index.html
@@ -172,6 +172,32 @@
     </section>
 
     <!-- Contacts -->
+    <section class="contact">
+        <div class="contact-container">
+            <div>
+                <div>
+                    <i class="bi bi-geo"></i>
+                    <span>Location</span>
+                </div>
+                <div>
+                    <i class="bi bi-envelope"></i>
+                    <span>gloire@gmail.com</span>
+                </div>
+                <div>
+                    <i class="bi bi-phone"></i>
+                    <span>Call</span>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <input type="text" placeholder="Your name">
+                    <input type="email" placeholder="Your email">
+                </div>
+                <input type="text" placeholder="Message title">
+                <textarea placeholder="Write your message..." name="" id=""></textarea>
+            </div>
+        </div>
+    </section>
 
     <script src="asset/javascript/app.js"></script>
 </body>
