add to my repository

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h4>About</h4>
                 <p></p>
             </div>
-            <h2>About us</h2>
+            <h2>about us</h2>
         </div>
         <div class="about-content">
             <div class="about-image">
@@ -95,7 +95,7 @@
     <section class="choose-us">
         <div class="title">
             <div>
-                <h4>Choose</h4>
+                <h4>choose</h4>
                 <p></p>
             </div>
             <h2>Why to choose us</h2>
@@ -151,7 +151,7 @@
     <!--section class="product">
         <div class="title">
             <div>
-                <h4>Product</h4>
+                <h4>product</h4>
                 <p></p>
             </div>
             <h2>Our products</h2>
@@ -173,8 +173,15 @@
 
     <!-- Contacts -->
     <section class="contact">
-        <div class="contact-container">
+        <div class="title">
             <div>
+                <h4>contact</h4>
+                <p></p>
+            </div>
+            <h2>Contact us</h2>
+        </div>
+        <div class="contact-container">
+            <div class="contact-info">
                 <div>
                     <i class="bi bi-geo"></i>
                     <span>Location</span>
@@ -188,7 +195,7 @@
                     <span>Call</span>
                 </div>
             </div>
-            <div>
+            <div class="contact-input">
                 <div>
                     <input type="text" placeholder="Your name">
                     <input type="email" placeholder="Your email">
