add to my repository

--- a/index.html
+++ b/index.html
@@ -182,17 +182,26 @@
         </div>
         <div class="contact-container">
             <div class="contact-info">
-                <div>
+                <div class="info">
                     <i class="bi bi-geo"></i>
-                    <span>Location</span>
+                    <div>
+                        <span>Location</span>
+                        <p>Kigali, Rwanda</p>
+                    </div>
                 </div>
-                <div>
+                <div class="info">
                     <i class="bi bi-envelope"></i>
-                    <span>gloire@gmail.com</span>
+                    <div>
+                        <span>Email</span>
+                        <a href="#">gloire@gmail.com</a>
+                    </div>
                 </div>
-                <div>
+                <div class="info">
                     <i class="bi bi-phone"></i>
-                    <span>Call</span>
+                    <div>
+                        <span>Call</span>
+                        <a href="#">+250 123456789</a>
+                    </div>
                 </div>
             </div>
             <div class="contact-input">
