add to my repository

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <input type="email" placeholder="Your email">
                 </div>
                 <input type="text" placeholder="Message title">
-                <textarea placeholder="Write your message..." name="" id=""></textarea>
+                <textarea placeholder="Write your message..." name="" id="" rows="5"></textarea>
             </div>
         </div>
     </section>
