add to my repository

--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
                 </div>
                 <input type="text" placeholder="Message title">
                 <textarea placeholder="Write your message..." name="" id="" rows="5"></textarea>
-                <button>Sumbit message</button>
+                <div>
+                    <button type="submit">Sumbit message</button>
+                </div>
             </div>
         </div>
     </section>
