--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </section>
 
     <!-- Products -->
-    <!--section class="product">
+    <section class="product">
         <div class="title">
             <div>
                 <h4>product</h4>
@@ -156,7 +156,7 @@
             </div>
             <h2>Our products</h2>
         </div>
-    </section-->
+    </section>
 
     <!-- Newsletter -->
 
