--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
             </div>
             <h2>Our products</h2>
         </div>
+        <div class="prod-container">
+            <div>
+
+            </div>
+        </div>
     </section>
 
     <!-- Newsletter -->
