add to my repository

--- a/index.html
+++ b/index.html
@@ -157,8 +157,21 @@
             <h2>Our products</h2>
         </div>
         <div class="prod-container">
-            <div>
-
+            <div class="prod-item">
+                <p><img src="asset/images/product/prod-1.jpg" alt=""></p>
+                <div class="item">
+                    <div class="item-details">
+                        <p>Jordan 1</p>
+                        <span>20$</span>
+                    </div>
+                    <div class="stars">
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
