add to my repository

--- a/index.html
+++ b/index.html
@@ -163,6 +163,58 @@
                     <div class="item-details">
                         <p>Jordan 1</p>
                         <span>20$</span>
+                        <a href="#">Lorem, ipsum.</a>
+                    </div>
+                    <div class="stars">
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="prod-item">
+                <p><img src="asset/images/product/prod-2.jpg" alt=""></p>
+                <div class="item">
+                    <div class="item-details">
+                        <p>Jordan 1</p>
+                        <span>20$</span>
+                        <a href="#">Lorem, ipsum.</a>
+                    </div>
+                    <div class="stars">
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="prod-item">
+                <p><img src="asset/images/product/prod-3.jpg" alt=""></p>
+                <div class="item">
+                    <div class="item-details">
+                        <p>Jordan 1</p>
+                        <span>20$</span>
+                        <a href="#">Lorem, ipsum.</a>
+                    </div>
+                    <div class="stars">
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="prod-item">
+                <p><img src="asset/images/product/prod-4.jpg" alt=""></p>
+                <div class="item">
+                    <div class="item-details">
+                        <p>Jordan 1</p>
+                        <span>20$</span>
+                        <a href="#">Lorem, ipsum.</a>
                     </div>
                     <div class="stars">
                         <i class="bi bi-star"></i>
