--- a/index.html
+++ b/index.html
@@ -225,6 +225,74 @@
                     </div>
                 </div>
             </div>
+            <div class="prod-item">
+                <p><img src="asset/images/product/prod-5.jpg" alt=""></p>
+                <div class="item">
+                    <div class="item-details">
+                        <p>Jordan 1</p>
+                        <span>20$</span>
+                        <a href="#">Lorem, ipsum.</a>
+                    </div>
+                    <div class="stars">
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="prod-item">
+                <p><img src="asset/images/product/prod-6.jpg" alt=""></p>
+                <div class="item">
+                    <div class="item-details">
+                        <p>Jordan 1</p>
+                        <span>20$</span>
+                        <a href="#">Lorem, ipsum.</a>
+                    </div>
+                    <div class="stars">
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="prod-item">
+                <p><img src="asset/images/product/prod-7.jpg" alt=""></p>
+                <div class="item">
+                    <div class="item-details">
+                        <p>Jordan 1</p>
+                        <span>20$</span>
+                        <a href="#">Lorem, ipsum.</a>
+                    </div>
+                    <div class="stars">
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="prod-item">
+                <p><img src="asset/images/product/prod-8.jpg" alt=""></p>
+                <div class="item">
+                    <div class="item-details">
+                        <p>Jordan 1</p>
+                        <span>20$</span>
+                        <a href="#">Lorem, ipsum.</a>
+                    </div>
+                    <div class="stars">
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
