add to my repository

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
         <div class="prod-container">
             <div class="prod-item">
-                <p><img src="asset/images/product/prod-1.jpg" alt=""></p>
+                <p><img src="asset/images/product/prod-1.png" alt=""></p>
                 <div class="item">
                     <div class="item-details">
                         <p>Jordan 1</p>
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="prod-item">
-                <p><img src="asset/images/product/prod-2.jpg" alt=""></p>
+                <p><img src="asset/images/product/prod-2.png" alt=""></p>
                 <div class="item">
                     <div class="item-details">
                         <p>Jordan 1</p>
@@ -192,7 +192,7 @@
                 </div>
             </div>
             <div class="prod-item">
-                <p><img src="asset/images/product/prod-3.jpg" alt=""></p>
+                <p><img src="asset/images/product/prod-3.png" alt=""></p>
                 <div class="item">
                     <div class="item-details">
                         <p>Jordan 1</p>
@@ -209,7 +209,7 @@
                 </div>
             </div>
             <div class="prod-item">
-                <p><img src="asset/images/product/prod-4.jpg" alt=""></p>
+                <p><img src="asset/images/product/prod-4.png" alt=""></p>
                 <div class="item">
                     <div class="item-details">
                         <p>Jordan 1</p>
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <div class="prod-item">
-                <p><img src="asset/images/product/prod-5.jpg" alt=""></p>
+                <p><img src="asset/images/product/prod-5.png" alt=""></p>
                 <div class="item">
                     <div class="item-details">
                         <p>Jordan 1</p>
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <div class="prod-item">
-                <p><img src="asset/images/product/prod-6.jpg" alt=""></p>
+                <p><img src="asset/images/product/prod-6.png" alt=""></p>
                 <div class="item">
                     <div class="item-details">
                         <p>Jordan 1</p>
@@ -260,7 +260,7 @@
                 </div>
             </div>
             <div class="prod-item">
-                <p><img src="asset/images/product/prod-7.jpg" alt=""></p>
+                <p><img src="asset/images/product/prod-7.png" alt=""></p>
                 <div class="item">
                     <div class="item-details">
                         <p>Jordan 1</p>
@@ -277,7 +277,7 @@
                 </div>
             </div>
             <div class="prod-item">
-                <p><img src="asset/images/product/prod-8.jpg" alt=""></p>
+                <p><img src="asset/images/product/prod-8.png" alt=""></p>
                 <div class="item">
                     <div class="item-details">
                         <p>Jordan 1</p>
