add to my repository

--- a/index.html
+++ b/index.html
@@ -291,6 +291,9 @@
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                     </div>
+                    <div class="panier">
+                        <i class="bi bi-cart"></i>
+                    </div>
                 </div>
             </div>
         </div>
