add to my repository

--- a/index.html
+++ b/index.html
@@ -172,6 +172,9 @@
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                     </div>
+                    <div class="panier">
+                        <a href="#"><i class="bi bi-cart"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="prod-item">
@@ -188,6 +191,9 @@
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
+                    </div>
+                    <div class="panier">
+                        <a href="#"><i class="bi bi-cart"></i></a>
                     </div>
                 </div>
             </div>
@@ -206,6 +212,9 @@
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                     </div>
+                    <div class="panier">
+                        <a href="#"><i class="bi bi-cart"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="prod-item">
@@ -222,6 +231,9 @@
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
+                    </div>
+                    <div class="panier">
+                        <a href="#"><i class="bi bi-cart"></i></a>
                     </div>
                 </div>
             </div>
@@ -240,6 +252,9 @@
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                     </div>
+                    <div class="panier">
+                        <a href="#"><i class="bi bi-cart"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="prod-item">
@@ -257,6 +272,9 @@
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                     </div>
+                    <div class="panier">
+                        <a href="#"><i class="bi bi-cart"></i></a>
+                    </div>
                 </div>
             </div>
             <div class="prod-item">
@@ -273,6 +291,9 @@
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
                         <i class="bi bi-star"></i>
+                    </div>
+                    <div class="panier">
+                        <a href="#"><i class="bi bi-cart"></i></a>
                     </div>
                 </div>
             </div>
@@ -292,7 +313,7 @@
                         <i class="bi bi-star"></i>
                     </div>
                     <div class="panier">
-                        <i class="bi bi-cart"></i>
+                        <a href="#"><i class="bi bi-cart"></i></a>
                     </div>
                 </div>
             </div>
