--- a/index.html
+++ b/index.html
@@ -318,6 +318,9 @@
                 </div>
             </div>
         </div>
+        <div class="more-product">
+            <a href="#">View in details</a>
+        </div>
     </section>
 
     <!-- Newsletter -->
