add to my repository

--- a/index.html
+++ b/index.html
@@ -383,6 +383,12 @@
         </div>
     </section>
 
+    <footer>
+        <div class="writer">
+            &copy; 2024 Online shoes Consultants Ltd. All rights reserved. <br> Developed by Glory with ❤️
+        </div>
+    </footer>
+
     <script src="asset/javascript/app.js"></script>
 </body>
 
