add to my repository

--- a/index.html
+++ b/index.html
@@ -336,6 +336,17 @@
         </div>
     </section>
 
+    <!-- Categories -->
+    <section class="categories">
+        <div class="title">
+            <div>
+                <h4>categories</h4>
+                <p></p>
+            </div>
+            <h2>All categories</h2>
+        </div>
+    </section>
+
     <!-- Contacts -->
     <section class="contact">
         <div class="title">
