add to my repository

--- a/index.html
+++ b/index.html
@@ -345,6 +345,16 @@
             </div>
             <h2>All categories</h2>
         </div>
+
+        <div class="categories-content">
+            <div class="categories-list">
+                <ul>
+                    <li>Men</li>
+                    <li>Women</li>
+                    <li>Child</li>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <!-- Contacts -->
