add to my repository

--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
         <div class="categories-content">
             <div class="categories-list">
                 <ul>
-                    <li>Men</li>
-                    <li>Wemen</li>
-                    <li>Child</li>
+                    <li data-filter="men">Men</li>
+                    <li data-filter="wemen">Wemen</li>
+                    <li data-filter="child">Children</li>
                 </ul>
             </div>
         </div>
