add to my repository

--- a/index.html
+++ b/index.html
@@ -354,6 +354,15 @@
                     <li data-filter="child">Children</li>
                 </ul>
             </div>
+
+            <div class="categories-item">
+                <div class="shoes">
+                    <p><img src="asset/images/product/prod-1.png" alt=""></p>
+                    <p><img src="asset/images/product/prod-3.png" alt=""></p>
+                    <p><img src="asset/images/product/prod-4.png" alt=""></p>
+                    <p><img src="asset/images/product/prod-5.png" alt=""></p>
+                </div>
+            </div>
         </div>
     </section>
 
