add to my repository

--- a/index.html
+++ b/index.html
@@ -355,12 +355,32 @@
                 </ul>
             </div>
 
-            <div class="categories-item">
-                <div class="shoes">
-                    <p><img src="asset/images/product/prod-1.png" alt=""></p>
-                    <p><img src="asset/images/product/prod-3.png" alt=""></p>
-                    <p><img src="asset/images/product/prod-4.png" alt=""></p>
-                    <p><img src="asset/images/product/prod-5.png" alt=""></p>
+            <div class="all-categories">
+                <div class="shoes-item">
+                    <div class="shoes">
+                        <p><img src="asset/images/product/prod-1.png" alt=""></p>
+                        <div>
+                            <span>Jordan 1</span>
+                        </div>
+                    </div>
+                    <div class="shoes">
+                        <p><img src="asset/images/product/prod-3.png" alt=""></p>
+                        <div>
+                            <span>Jordan 1</span>
+                        </div>
+                    </div>
+                    <div class="shoes">
+                        <p><img src="asset/images/product/prod-4.png" alt=""></p>
+                        <div>
+                            <span>Jordan 1</span>
+                        </div>
+                    </div>
+                    <div class="shoes">
+                        <p><img src="asset/images/product/prod-5.png" alt=""></p>
+                        <div>
+                            <span>Jordan 1</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
