add to my repository

--- a/index.html
+++ b/index.html
@@ -359,25 +359,25 @@
                 <div class="shoes-item">
                     <div class="shoes">
                         <p><img src="asset/images/product/prod-1.png" alt=""></p>
-                        <div>
+                        <div class="overlay">
                             <span>Jordan 1</span>
                         </div>
                     </div>
                     <div class="shoes">
                         <p><img src="asset/images/product/prod-3.png" alt=""></p>
-                        <div>
+                        <div class="overlay">
                             <span>Jordan 2</span>
                         </div>
                     </div>
                     <div class="shoes">
                         <p><img src="asset/images/product/prod-4.png" alt=""></p>
-                        <div>
+                        <div class="overlay">
                             <span>Jordan 3</span>
                         </div>
                     </div>
                     <div class="shoes">
                         <p><img src="asset/images/product/prod-5.png" alt=""></p>
-                        <div>
+                        <div class="overlay">
                             <span>Jordan 4</span>
                         </div>
                     </div>
