add to my repository

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         <div class="categories-content">
             <div class="categories-list">
                 <ul>
-                    <li data-filter="men">Men</li>
+                    <li class="active" data-filter="men">Men</li>
                     <li data-filter="wemen">Wemen</li>
                     <li data-filter="child">Children</li>
                 </ul>
