add to my repository

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             </div>
 
             <div class="all-categories">
-                <div class="shoes-item">
+                <div class="shoes-item men-shoes">
                     <div class="shoes">
                         <p><img src="asset/images/product/prod-1.png" alt=""></p>
                         <div class="overlay">
@@ -383,6 +383,43 @@
                     </div>
                 </div>
             </div>
+
+            <div class="shoes-item wemen-shoes">
+                <div class="shoes">
+                    <p><img src="asset/images/product/prod-1.png" alt=""></p>
+                    <div class="overlay">
+                        <span>Jordan 1</span>
+                    </div>
+                </div>
+                <div class="shoes">
+                    <p><img src="asset/images/product/prod-3.png" alt=""></p>
+                    <div class="overlay">
+                        <span>Jordan 2</span>
+                    </div>
+                </div>
+                <div class="shoes">
+                    <p><img src="asset/images/product/prod-4.png" alt=""></p>
+                    <div class="overlay">
+                        <span>Jordan 3</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="shoes-item children-shoes">
+                <div class="shoes">
+                    <p><img src="asset/images/product/prod-3.png" alt=""></p>
+                    <div class="overlay">
+                        <span>Jordan 2</span>
+                    </div>
+                </div>
+                <div class="shoes">
+                    <p><img src="asset/images/product/prod-4.png" alt=""></p>
+                    <div class="overlay">
+                        <span>Jordan 3</span>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
