add to my repository

--- a/index.html
+++ b/index.html
@@ -349,9 +349,9 @@
         <div class="categories-content">
             <div class="categories-list">
                 <ul>
-                    <li class="active" data-filter="men">Men</li>
-                    <li data-filter="wemen">Wemen</li>
-                    <li data-filter="child">Children</li>
+                    <li class="active" data-filter="men-shoes">Men</li>
+                    <li data-filter="wemen">Women</li>
+                    <li data-filter="children">Children</li>
                 </ul>
             </div>
 
@@ -382,45 +382,45 @@
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="shoes-item wemen-shoes">
-                <div class="shoes">
-                    <p><img src="asset/images/product/prod-1.png" alt=""></p>
-                    <div class="overlay">
-                        <span>Jordan 1</span>
+                <div class="shoes-item wemen">
+                    <div class="shoes">
+                        <p><img src="asset/images/product/prod-1.png" alt=""></p>
+                        <div class="overlay">
+                            <span>Jordan 1</span>
+                        </div>
+                    </div>
+                    <div class="shoes">
+                        <p><img src="asset/images/product/prod-3.png" alt=""></p>
+                        <div class="overlay">
+                            <span>Jordan 2</span>
+                        </div>
+                    </div>
+                    <div class="shoes">
+                        <p><img src="asset/images/product/prod-4.png" alt=""></p>
+                        <div class="overlay">
+                            <span>Jordan 3</span>
+                        </div>
                     </div>
                 </div>
-                <div class="shoes">
-                    <p><img src="asset/images/product/prod-3.png" alt=""></p>
-                    <div class="overlay">
-                        <span>Jordan 2</span>
-                    </div>
-                </div>
-                <div class="shoes">
-                    <p><img src="asset/images/product/prod-4.png" alt=""></p>
-                    <div class="overlay">
-                        <span>Jordan 3</span>
-                    </div>
-                </div>
-            </div>
 
-            <div class="shoes-item children-shoes">
-                <div class="shoes">
-                    <p><img src="asset/images/product/prod-3.png" alt=""></p>
-                    <div class="overlay">
-                        <span>Jordan 2</span>
+                <div class="shoes-item children">
+                    <div class="shoes">
+                        <p><img src="asset/images/product/prod-3.png" alt=""></p>
+                        <div class="overlay">
+                            <span>Jordan 2</span>
+                        </div>
                     </div>
-                </div>
-                <div class="shoes">
-                    <p><img src="asset/images/product/prod-4.png" alt=""></p>
-                    <div class="overlay">
-                        <span>Jordan 3</span>
+                    <div class="shoes">
+                        <p><img src="asset/images/product/prod-4.png" alt=""></p>
+                        <div class="overlay">
+                            <span>Jordan 3</span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
+
     </section>
 
     <!-- Contacts -->
