add to my repository

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             </div>
         </div>
         <div class="more-product">
-            <a href="#">View in details</a>
+            <a href="product.html">View in details</a>
         </div>
     </section>
 
