--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
 
     <!--css-->
     <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/product.css">
 
     <!--Font family-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
@@ -40,6 +41,10 @@
     </header>
 
     <!--Product home page-->
+    <section class="product-home">
+        <h3>#Product</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit debitis quis alias vero tempore?</p>
+    </section>
 
     <script src="asset/javascript/app.js"></script>
 </body>
