--- a/product.html
+++ b/product.html
@@ -31,7 +31,7 @@
                 <p><img src="asset/images/logo.png" alt=""></p>
             </div>
             <div class="list">
-                <a class="home" href="#">Home</a>
+                <a class="home" href="index.html">Home</a>
                 <a href="#">About us</a>
                 <a href="#">Products</a>
                 <a href="#">Contacts</a>
