add to my repository

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                 <input type="text" placeholder="Message title">
                 <textarea placeholder="Write your message..." name="" id="" rows="5"></textarea>
                 <div>
-                    <button type="submit">Sumbit message</button>
+                    <button type="submit">Send message</button>
                 </div>
             </div>
         </div>
