add to my repository

--- a/product.html
+++ b/product.html
@@ -46,6 +46,33 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit debitis quis alias vero tempore?</p>
     </section>
 
+    <section class="product-type">
+        <div>
+            <div>
+                <p><img src="asset/images/bg-1.jpg" alt=""></p>
+                <div>
+                    <p><img src="asset/images/bg-2.jpg" alt=""></p>
+                    <p><img src="asset/images/bg-3.jpg" alt=""></p>
+                    <p><img src="asset/images/bg-4.jpg" alt=""></p>
+                    <p><img src="asset/images/bg-5.jpg" alt=""></p>
+                </div>
+            </div>
+            <div class="text-box">
+                <h4>Joradn 1</h4>
+                <span>20$</span>
+                <div class="stars">
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star"></i>
+                </div>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit rerum harum totam sit laboriosam dolorum eaque animi quam ducimus iste?</p>
+                <a href="#">Make a command</a>
+            </div>
+        </div>
+    </section>
+
     <script src="asset/javascript/app.js"></script>
 </body>
 
